--- a/2017/task_06/css/task_06.css
+++ b/2017/task_06/css/task_06.css
@@ -1,4 +1,5 @@
 /*清浮动*/
+
 .clearfix:after {
 	content: "";
 	display: block;
@@ -22,19 +23,31 @@
 .fr {
 	float: right;
 }
-p{
+
+p,blockquote {
 	margin: 0;
 	padding: 0;
 }
-.inline-b{
+
+h1 {
+	margin: 0;
+}
+
+.inline-b {
 	display: inline-block;
 }
-.container{
+
+.indent {
+	text-indent: 25px;
+}
+
+.container {
 	width: 980px;
 	height: 1386px;
 	margin: 0 auto;
 }
-header{
+
+header {
 	position: relative;
 	width: 892px;
 	height: 61px;
@@ -42,96 +55,427 @@ header{
 	font-size: 12px;
 	font-family: "黑体";
 }
-.header-left{
+
+.header-left {
 	position: absolute;
 	width: 110px;
 	height: 61px;
 	background-color: #d45d5c;
 }
-.header-name{
+
+.header-name {
 	position: absolute;
 	left: 7px;
-    bottom: 0;
-    color: #fff;
+	bottom: 0;
+	color: #fff;
 }
-.header-right{
+
+.header-right {
 	position: absolute;
-    right: 0;
-    bottom: 0;
-    color: #D45D5C;
+	right: 0;
+	bottom: 0;
+	color: #D45D5C;
 }
-.banner-left,.banner-right{
+
+.banner-left,
+.banner-right {
 	display: inline-block;
 	vertical-align: top;
 }
-.banner-left{
+
+.banner-left {
 	position: relative;
 	width: 641px;
 	height: 301px;
 	margin-right: 48px;
 }
-.banner-img,.banner-img img{
+
+.banner-img,
+.banner-img img {
 	width: 641px;
 	height: 301px;
 }
+
 .moc-left,
 .moc-left img,
 .moc-right,
-.moc-right img{
+.moc-right img {
 	width: 191px;
 	height: 301px;
 }
-.moc-left,.moc-right{
+
+.moc-left,
+.moc-right {
 	position: absolute;
-    top: 0;
+	top: 0;
 }
-.moc-right{
+
+.moc-right {
 	right: 0;
 }
-.banner{
+
+.banner {
 	margin: 34px 0;
 }
-.line{
+
+.line {
 	width: 203px;
 	height: 2px;
 	background-color: #cc8091;
 }
-.banner-title{
-	font-size: 24px; 
+
+.banner-title {
+	font-size: 24px;
 	line-height: 40px;
-	font-family: "微软雅黑";  
-	color: #000;  
+	font-family: "微软雅黑";
+	color: #000;
 }
-.banner-title:first-letter{
+
+.banner-title:first-letter {
 	font-size: 40px;
 }
-.banner-title span{
+
+.banner-title span {
 	border-bottom: 2px solid #000;
 }
-.banner-info{
+
+.banner-info {
 	width: 200px;
 	line-height: 10px;
 	font-family: "楷体";
 	font-size: 12px;
 	color: #676767;
 }
-.banner-num{
+
+.banner-num {
 	font-family: "微软雅黑";
 	font-size: 116px;
 	color: #75b86b;
 	transform: skewX(-10deg);
 }
-.banner-bot{
+
+.banner-bot {
 	font-family: "微软雅黑";
-	color: #CC8091; 
+	color: #CC8091;
 }
-.bot-left{
+
+.bot-left {
 	font-size: 55px;
 }
-.bot-right-name{
-	font-size:21px ;
+
+.bot-right-name {
+	font-size: 21px;
 }
-.bot-right-info{
+
+.bot-right-info {
 	font-size: 12px;
 	color: #231815;
+}
+
+.article {
+	width: 641px;
+	font-size: 12px;
+	font-family: "宋体";
+	color: #767777;
+	line-height: 16px;
+}
+
+.article-left-item,
+.article-middle-item,
+.article-right-item {
+	display: inline-block;
+}
+
+.article-left-item {
+	width: 229px;
+	margin-right: 26px;
+}
+
+.article-middle-item {
+	width: 206px;
+	margin-right: 26px;
+}
+
+.article-right-item {
+	width: 132px;
+}
+
+.article-what,
+.article-when,
+.article-how {
+	font-family: "微软雅黑";
+	font-size: 16px;
+	font-weight: bold;
+	text-decoration: underline;
+}
+
+.article-what {
+	color: #418c59;
+}
+
+.article-when {
+	color: #d2994f;
+}
+
+.article-how {
+	color: #cc7680;
+}
+
+.rate {
+	margin-top: 50px;
+}
+
+.rate-name,
+.rate-num {
+	font-family: "微软雅黑";
+	font-size: 12px;
+	line-height: 16px;
+	opacity: 0.7;
+}
+
+.rate-name {
+	color: #231815;
+}
+
+.rate-num {
+	color: #cd4a48;
+	font-style: italic;
+}
+
+.main {
+	margin-top: 75px;
+}
+
+.main-left {
+	width: 415px;
+	margin-right: 20px;
+	vertical-align: top;
+}
+
+.main-right {
+	vertical-align: top;
+}
+
+.main-title {
+	font-size: 42px;
+	color: #11456b;
+	font-family: "黑体";
+	font-weight: bold;
+	/*line-height: 16px;*/
+}
+
+.main-title-big {
+	font-size: 72px;
+	color: #f5e327;
+	font-style: italic;
+}
+
+.main-title p {
+	line-height: 16px;
+}
+
+.main-subtitle {
+	font-size: 33px;
+	color: #11456b;
+	font-family: "黑体";
+	line-height: 16px;
+	font-weight: bold;
+}
+
+.main-title-line {
+	width: 415px;
+	height: 2px;
+	background-color: #11456B;
+}
+
+.main-left-img {
+	float: right;
+	margin: 20px 0 20px 20px;
+}
+
+.main-article p {
+	font-size: 12px;
+	color: #767777;
+	font-family: "宋体";
+	line-height: 16px;
+}
+
+.main-article p.main-article-first {
+	font-size: 70px;
+	color: #F5E327;
+	font-family: "微软雅黑";
+	line-height: 70px;
+	vertical-align: super;
+}
+
+.top-article {
+	width: 340px;
+}
+
+.main-right-top {
+	position: relative;
+}
+
+.bot-img {
+	width: 458px;
+	height: 275px;
+}
+
+.moc-title {
+	position: absolute;
+	bottom: 0;
+	width: 458px;
+	height: 61px;
+	background: url(../images/moc_bot.png) no-repeat;
+}
+
+.moc-title-big {
+	font-size: 26px;
+	color: #fff;
+	font-family: "微软雅黑";
+	padding-left: 12px;
+	border-left: 3px solid #72b16a;
+}
+
+.moc-title-small {
+	font-size: 12px;
+	color: #72b16a;
+	font-style: italic;
+	font-family: "微软雅黑";
+}
+
+.moc-title p {
+	margin-left: 38px;
+	line-height: 61px;
+}
+
+.main-right-bot {
+	width: 459px;
+	height: 318px;
+	background-color: #eeedd6;
+}
+
+.main-right-list {
+	padding: 30px 20px 0 30px;
+}
+
+.main-right-list p {
+	position: relative;
+	margin-bottom: 24px;
+}
+
+#triangle-up {
+	position: absolute;
+	bottom: 4px;
+	width: 0;
+	height: 0;
+	border-left: 5px solid transparent;
+	border-right: 5px solid transparent;
+	border-bottom: 10px solid #10456b;
+}
+
+.list-info {
+	font-size: 16px;
+	color: #5a5b5b;
+	font-family: "宋体";
+	text-align: left;
+	line-height: 20px;
+	padding-left: 18px;
+}
+
+.space {
+	letter-spacing: 2px;
+}
+
+.list-name {
+	font-size: 12px;
+	color: #5A5B5B;
+	font-family: "宋体";
+	font-style: italic;
+	text-align: right;
+	line-height: 20px;
+}
+
+.introduce-box {
+	width: 260px;
+	height: 115px;
+	padding: 15px 14px 20px 10px;
+	background-color: #d45d5c;
+	vertical-align: top;
+}
+
+.zero {
+	font-size: 110px;
+	color: #fff;
+	font-family: "微软雅黑";
+}
+
+.introduce-box-line {
+	width: 2px;
+	height: 86px;
+	background-color: #fff;
+}
+
+.introduce-box-right {
+	width: 170px;
+	vertical-align: super;
+}
+
+.introduce-box-right p {
+	font-size: 21px;
+	color: #fff;
+	font-family: "黑体";
+	font-style: italic;
+	line-height: 24px;
+}
+
+.introduce-box-right p.introduce-box-small {
+	font-size: 12px;
+	color: #fff;
+	line-height: 12px;
+	font-style: normal;
+}
+
+.introduce-info {
+	width: 160px;
+	vertical-align: top;
+}
+
+.introduce-info p {
+	font-size: 14px;
+	color: #5A5B5B;
+	font-family: "黑体";
+	font-style: italic;
+	line-height: 16px;
+}
+
+.quot {
+	font-size: 72px;
+	color: #D45D5C;
+	font-family: "黑体";
+}
+
+footer {
+	width: 892px;
+	margin: 37px 0;
+	border-top: 1px solid #938e8c;
+}
+
+.footer-info {
+	float: right;
+	font-size: 12px;
+	color: #D45D5C;
+	font-family: "黑体";
+}
+
+blockquote {
+	width: 163px;
+	background: url(../images/close-quote.png) no-repeat right bottom;
+	padding-left: 18px;
+	text-indent: -18px;
+}
+
+blockquote:first-letter {
+	background: url(../images/open-quote.png) no-repeat left top;
+	padding-left: 18px;
 }
